syntax = "proto3";

package protocel.validate;
option go_package = "github.com/nlachfr/protocel/validate";

import "google/protobuf/descriptor.proto";
import "options/options.proto";

extend google.protobuf.FileOptions {
    FileRule file = 1178;
}

extend google.protobuf.ServiceOptions {
    ServiceRule service = 1178;
}

extend google.protobuf.MethodOptions {
    MethodRule method = 1178;
}

extend google.protobuf.MessageOptions {
    MessageRule message = 1178;
}

extend google.protobuf.FieldOptions {
    FieldRule field = 1178;
}

message Options {
    FileRule rule = 1;
    bool required_support_disabled = 2;
    bool resource_reference_support_disabled = 3;
}

message FileRule {
    protocel.options.Options options = 1;
    map<string,ServiceRule> service_rules = 2;
    map<string,MessageRule> message_rules = 3;
}

message ServiceRule {
    protocel.options.Options options = 1;
    Rule rule = 2;
    map<string,MethodRule> method_rules = 3;
}

message MethodRule {
    Rule rule = 1;
}

message MessageRule {
    protocel.options.Options options = 1;
    Rule rule = 2;
    map<string,FieldRule> field_rules = 3;
}

message FieldRule {
    Rule rule = 1;
}

message Rule {
    message Program {
        string id = 1;
        string expr = 2;
    }
    protocel.options.Options options = 1;
    repeated Program programs = 2;
}